# keycmd

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
keycmd/: __main__.py  cli.py  conf.py  creds.py  logs.py  shell.py  wsl.py
keyring_tools/: __main__.py  cli_cmd.py  cli_shell.py  conf.py  creds.py  shell.py
tests/: test_cli.py  test_conf.py  test_creds.py  test_logs.py  test_shell.py
