[tool.poetry]
name = "keycmd"
version = "0.6.0"
description = ""
authors = ["Korijn van Golen <korijn.vangolen@zimmerbiomet.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
keyring = "^24.3.0"
tomli = "^2.0.1"
shellingham = "^1.5.4"

[tool.poetry.scripts]
keycmd = 'keycmd.cli:main'

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
twine = "^4.0.2"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E4",
    "E5",
    "E7",
    "E9",
    "F",   # Pyflakes (default)
    "I",   # isort imports
    "N",   # pep8-naming
    "T10", # flake8-debugger
    "T20", # flake8-print
    "RUF", # ruff
]

[tool.ruff.per-file-ignores]
"keycmd/logs.py" = ["T201"]

# example config for development and testing
[tool.keycmd.keys]
ARTIFACTS_TOKEN = { credential = "azure@poetry-repository-main", username = "azure" }

[tool.keycmd.aliases]
ARTIFACTS_TOKEN_B64 = { key = "ARTIFACTS_TOKEN", b64 = true }
